packages/biome-plugin/test/fixtures/invalid/fluent-escape.ts
export const build = (): FluentResult<number, string> => null as unknown as FluentResult<number, string>;

export interface Holder {
  chain: FluentMaybe<number>;
}
